# hajimu_engine_core

./: .gitignore  CMakeLists.txt  Makefile  README.md  hajimu.json  release.sh
.github/workflows/: build.yml
include/engine/: engine.hpp
include/engine/audio/: audio_system.hpp
include/engine/core/: log.hpp  memory.hpp  reflection.hpp  task_graph.hpp  types.hpp
include/engine/ecs/: archetype.hpp  command_buffer.hpp  component.hpp  entity.hpp  query.hpp  system.hpp  world.hpp
include/engine/input/: action_map.hpp  input_system.hpp
include/engine/network/: net_system.hpp
include/engine/physics/: physics_world.hpp
include/engine/render/: render_backend.hpp  render_graph.hpp  shader_compiler.hpp
include/engine/resource/: asset_handle.hpp  resource_manager.hpp  vfs.hpp
include/engine/scene/: prefab.hpp  scene_graph.hpp  transform.hpp
include/engine/script/: script_runtime.hpp
src/: plugin.cpp
src/audio/: audio_system.cpp
src/core/: log.cpp  memory.cpp  reflection.cpp  task_graph.cpp
src/ecs/: archetype.cpp  command_buffer.cpp  system.cpp  world.cpp
src/input/: input_system.cpp
src/network/: net_system.cpp
src/physics/: physics_world.cpp
src/render/: render_backend.cpp  render_graph.cpp
src/resource/: resource_manager.cpp  vfs.cpp
src/scene/: scene_graph.cpp  transform.cpp
src/script/: script_runtime.cpp
tests/: test_ecs.cpp
